Cibyl (19)
	* Some more panic cases to handle broken binaries etc in a good way
	and added gcov tests to improve the quality of the C++ translator

	* More Object methods implemented, including wait() and notify() which
	can be used to provide synchronization between threads

	* Added option to control thread safety and reorganized the code to
	support this. This is still off by default but can be enabled by the
	--thread-safe option to cibyl-mips2java

	* Inlining of builtins (softfloat operations) has now been implemented
	in the C++ translator as well. Most important optimizations except for
	function colocation are now present in the C++ translator

	* The C++ translator now inlines lb/lh/lbu/lhu/sb/sh instructions as
	well (which the Python translator doesn't). This is done if the size
	of the method is small enough.

	* Honor the --only-translate option for C++ as well

	* Prune unused functions also in the C++ translator

	* Implemented the 32-bit mul/div optimization for the C++ translator
	as well. This is on by default and cannot be turned off

	* Added more sanity checks throughout the code, e.g., for snprintfs

	* Implemented splitting classes for C++ as well. This is needed as a
	workaround for blackberry problems.

	* Implemented call a table hierarchy in the C++ translator. This is
	needed as a workaround for problems on some phones

	* Added a compiler option to implement 8- and 16-bit loads and stores
	through subroutines instead of static methods in the runtime
	support. This should improve performance a bit

	* Mark the instructions used in each function

	* Implemented symbol exporting to Java with the CIBYL_EXPORT_SYMBOL
	macro and allow generation of these interfaces by the translator

	* Refactored the implementation of ELF section handling - much more
	general now

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (18)
	* Peephole optimization is now possible for the C++ translator

	* Micro optimizations of lb/lh/sb/sh in CRunTime.java
