@@ -1,0 +1,17 @@
+/*********************************************************************
+ *
+ * Copyright (C) 2008,  Simon Kagstrom
+ *
+ * Filename:      unistd.h
+ * Author:        Simon Kagstrom <simon.kagstrom@gmail.com>
+ * Description:   Unistd stuff (rmdir)
+ *
+ * $Id:$
+ *
+ ********************************************************************/
+#ifndef __SYS__UNISTD_H__
+#define __SYS__UNISTD_H__
+
+extern int rmdir(const char *pathname);
+
+#endif /* !__SYS__UNISTD_H__ */
