@@ -62,6 +62,7 @@ int NOPH_FileConnection_fileSize(NOPH_FileConnection_t fc); /* Throws */
 void NOPH_FileConnection_create(NOPH_FileConnection_t fc); /* Throws */
 void NOPH_FileConnection_delete(NOPH_FileConnection_t fc); /* Throws */
 void NOPH_FileConnection_close(NOPH_FileConnection_t fc); /* Throws */
+void NOPH_FileConnection_mkdir(NOPH_FileConnection_t fc); /* Throws */
 NOPH_Enumeration_t NOPH_FileConnection_list(NOPH_FileConnection_t fc); /* Throws */
 
 /* Sockets API */
